--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@supabase/supabase-js": "^2.57.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jspdf": "3.0.3",
     "lucide-react": "^0.542.0",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
